--- a/src/index.html
+++ b/src/index.html
@@ -5,16 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>New App</title>
+    <title>Records App</title>
 </head>
 
 <body>
+    <h1> Records </h1>
+    <hr/>
 
-    <img src="assets/images/favicon.png" alt="logo">
-    <button type="submit" id="#btn" href="#"> click me </button>
-    <p id="#label"></p>
-
-
+    <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+    </div>
+    <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+    </div>
 
 </body>
 
