se añadieron las cartas con los records

--- a/src/index.html
+++ b/src/index.html
@@ -9,17 +9,25 @@
 </head>
 
 <body>
-    <h1> Records </h1>
-    <hr/>
+    <h1 class="p-2"> Records </h1>
+    <hr>
 
-    <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Email address</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-    </div>
-    <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-    </div>
+
+    <main id="#main">
+
+
+    </main>
+
+    <!-- <form>
+        <div class="row">
+            <div class="col">
+                <input type="text" class="form-control" placeholder="First name">
+            </div>
+            <div class="col">
+                <input type="text" class="form-control" placeholder="Last name">
+            </div>
+        </div>
+    </form> -->
 
 </body>
 
